--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -11,7 +11,7 @@
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -29,6 +29,23 @@
     <main>
         <h1>Teste de imagens de fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quos nostrum doloribus. Blanditiis non soluta ab doloremque illum architecto iusto similique vitae sapiente voluptatum, debitis quaerat, sed quia aspernatur magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis doloribus fuga quia in. Necessitatibus error facere animi ex, quae rem assumenda corrupti molestias reiciendis non cum nulla molestiae temporibus maiores.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quos nostrum doloribus. Blanditiis non soluta ab doloremque illum architecto iusto similique vitae sapiente voluptatum, debitis quaerat, sed quia aspernatur magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis doloribus fuga quia in. Necessitatibus error facere animi ex, quae rem assumenda corrupti molestias reiciendis non cum nulla molestiae temporibus maiores.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quos nostrum doloribus. Blanditiis non soluta ab doloremque illum architecto iusto similique vitae sapiente voluptatum, debitis quaerat, sed quia aspernatur magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis doloribus fuga quia in. Necessitatibus error facere animi ex, quae rem assumenda corrupti molestias reiciendis non cum nulla molestiae temporibus maiores.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quos nostrum doloribus. Blanditiis non soluta ab doloremque illum architecto iusto similique vitae sapiente voluptatum, debitis quaerat, sed quia aspernatur magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis doloribus fuga quia in. Necessitatibus error facere animi ex, quae rem assumenda corrupti molestias reiciendis non cum nulla molestiae temporibus maiores.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quos nostrum doloribus. Blanditiis non soluta ab doloremque illum architecto iusto similique vitae sapiente voluptatum, debitis quaerat, sed quia aspernatur magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis doloribus fuga quia in. Necessitatibus error facere animi ex, quae rem assumenda corrupti molestias reiciendis non cum nulla molestiae temporibus maiores.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quos nostrum doloribus. Blanditiis non soluta ab doloremque illum architecto iusto similique vitae sapiente voluptatum, debitis quaerat, sed quia aspernatur magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis doloribus fuga quia in. Necessitatibus error facere animi ex, quae rem assumenda corrupti molestias reiciendis non cum nulla molestiae temporibus maiores.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quos nostrum doloribus. Blanditiis non soluta ab doloremque illum architecto iusto similique vitae sapiente voluptatum, debitis quaerat, sed quia aspernatur magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis doloribus fuga quia in. Necessitatibus error facere animi ex, quae rem assumenda corrupti molestias reiciendis non cum nulla molestiae temporibus maiores.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quos nostrum doloribus. Blanditiis non soluta ab doloremque illum architecto iusto similique vitae sapiente voluptatum, debitis quaerat, sed quia aspernatur magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis doloribus fuga quia in. Necessitatibus error facere animi ex, quae rem assumenda corrupti molestias reiciendis non cum nulla molestiae temporibus maiores.</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quos nostrum doloribus. Blanditiis non soluta ab doloremque illum architecto iusto similique vitae sapiente voluptatum, debitis quaerat, sed quia aspernatur magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis doloribus fuga quia in. Necessitatibus error facere animi ex, quae rem assumenda corrupti molestias reiciendis non cum nulla molestiae temporibus maiores.</p>
+
+
     </main>
 </body>
 </html>
